src-ken&y/objects/Order_Line__c.object
<CustomObject>
    <customHelpPage>HelpOrder</customHelpPage>
    <description>The order lines for the related order object.</description>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Order__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliver-To Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Order Lines (Deliver-to Facility)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliver-To Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Order Lines (Deliver-to Location)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>If selected, there is a problem with the sales order line. Exceptions must be resolved before you can process the order.</description>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <label>Deprecated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overage_Percentage__c</fullName>
        <label>Overage Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overage_Quantity__c</fullName>
        <formula>Overage_Percentage__c * Quantity_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overage Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Putaway_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Putaway Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Order Lines (Putaway Location)</relationshipLabel>
        <relationshipName>Order_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The quantity that is allocated to the order line but not yet shipped.</description>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Backordered__c</fullName>
        <label>Quantity Backordered</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <description>The number of items ordered in this order line</description>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Released__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>The quantity that is released to be allocated against the order line.</description>
        <label>Quantity Released</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of items that have been shipped to date. This field is copied over and kept up to date from the corresponding shipment details object.</description>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Still_Due__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Status__c, &apos;Open&apos;)) , 0, Quantity_Ordered__c - Quantity_Received__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Still Due</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Receive__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Status__c, &apos;Open&apos;)) , 0,Quantity_Shipped__c   -  Quantity_Received__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity To Receive</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Ship__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Status__c, &apos;Open&apos;)) , 0, Quantity_Ordered__c - Quantity_Shipped__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity To Ship</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Order Lines (Receiving Company)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Lines (To Item)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <defaultValue>today( )</defaultValue>
        <description>Date the customer requires the line item</description>
        <label>Required  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_From_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The label is company till we support inter company transfers</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction currency of the line to be derived from the Order</description>
        <formula>text(Order__r.Transaction_Currency__c)</formula>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <label>Order Line</label>
    <nameField>
        <label>Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>